## stage0 is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with stage0.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added

** Changed

** Fixed

** Removed

* 0.4.0 - 2020-02-02
** Added
Added High level prototype for stage1_assembler-0
Added High level prototype for stage0_monitor
Added High level prototype for CAT.s
Added High level prototype for cc_x86.s
Added posix-mode primtive getcwd
Added High level prototype for cc_knight-native
Added cc_knight-native.s
Added High level prototype for cc_amd64
Added cc_amd64.s
Added High level prototype for cc_knight-posix
Added cc_knight-posix.s
Added High level prototype for cc_armv7l
Added cc_armv7l.s
Added High level prototype for cc_aarch64
Added cc_aarch64.s
Added submodule for universal bootstrap binaries

** Changed
Modified cc_knight-native.s to generate output compatible with large binaries

** Fixed
Eliminated the discrepency between stage1/stage1_assembler-2.s and stage1/stage1_assembler-2.hex1

** Removed
Eliminated need for GCC to build hex.c to build the bootstrap binaries
Eliminated floppy disk images

* 0.3.0 - 2020-01-18
** Added
Added support for envp in cc_x86.s
Added support for --POSIX-MODE to allow cross-platform testing to be easier
Expanded the disassembler's support of HALCODE to include POSIX instructions
Imported from mescc-tools-seed:
	for AMD64:
		catm in hex0, M1 and NASM
		hex0 in hex0, M1 and NASM
		hex1 in hex0, hex1, M1 and NASM
		hex2 in hex1, hex2, M1 and NASM
		M0 in hex2, M1 and NASM
		cc_x86 in M1 and NASM
		cc_amd64 in M1 and NASM
	for x86:
		catm in hex0, M1 and NASM
		hex0 in hex0, M1 and NASM
		hex1 in hex0, hex1, M1 and NASM
		hex2 in hex1, hex2, M1 and NASM
		M0 in hex2, M1 and NASM
		cc_x86 in M1 and NASM